--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
   broker-service:
     build: ./backend/broker
     container_name: broker-container
-    # ports:
-    #   - "8080:8080"
+    ports:
+      - "8080:8080"
     depends_on:
       - redis-service
 
@@ -21,12 +21,12 @@ services:
     depends_on:
       - redis-service
 
-  frontend-service:
-    build: ./frontend
-    container_name: frontend-container
-    ports:
-      - "5173:5173"
-    depends_on:
-      - broker-service
-      - publisher-service
-      - redis-service
+  # frontend-service:
+  #   build: ./frontend
+  #   container_name: frontend-container
+  #   ports:
+  #     - "5173:5173"
+  #   depends_on:
+  #     - broker-service
+  #     - publisher-service
+  #     - redis-service
