--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   redis-service:
     image: redis
     container_name: redis-container
-    # ports:
-    #   - "6379:6379"
+    ports:
+      - "6379:6379"
 
   broker-service:
     build: ./backend/broker
