--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,30 @@ services:
     ports:
       - "6379:6379"
 
-  broker-service:
-    build: ./backend/broker
-    container_name: broker-container
+  nginx-service:
+    image: nginx:alpine
+    container_name: nginx-loadbalancer-container
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - "8080:8080"
+      - "8080:80" # Expose this to your frontend<host:container>
+    depends_on:
+      - broker1
+      - broker2
+
+  broker-service1:
+    build: ./backend/broker
+    container_name: broker-container1
+    # ports:
+    #   - "8081:8080"
+    depends_on:
+      - redis-service
+
+  broker-service2:
+    build: ./backend/broker
+    container_name: broker-container2
+    # ports:
+    #   - "8082:8080"  # Local debug port (optional)
     depends_on:
       - redis-service
 
