--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ events {}
 
 http {
   upstream websocket_backend {
-    server broker1:8080;
-    server broker2:8080;
+    server broker-service1:8080;
+    server broker-service2:8080;
   }
 
   server {
